chore: deploying to gh-pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<small>A minimal dependency injection library for node.js</small>
 				<br>
 				<img style="margin: 0px !important; border: 0px !important; opacity: 0.8; background-color: transparent; box-shadow: none;"
-					height="350" data-src="./images/1.png" alt="...">
+					height="350" data-src="/Reaching88MphWithSystemic/images/1.png" alt="...">
 				<p style="margin: 0px !important;">
 					<small style="text-align: left; margin-right: 40px;">Matteo Di Paolantonio</small>
 					<small class="gs-text" style="text-align: right; margin-left: 40px;">10/07/2020</small>
@@ -171,7 +171,7 @@
 						</div>
 						<div class="column">
 							<img style="margin: 50px 0 0 0 !important; border: 0px !important; opacity: 0.8; background-color: transparent; box-shadow: none;"
-								height="200" data-src="./images/2.png" alt="...">
+								height="200" data-src="/Reaching88MphWithSystemic/images/2.png" alt="...">
 						</div>
 					</div>
 
@@ -211,7 +211,7 @@
 
 				<section>
 					<h2>talk is cheap</h2>
-					<img height="200" data-src="./images/3.gif" alt="...">
+					<img height="200" data-src="/Reaching88MphWithSystemic/images/3.gif" alt="...">
 					<br>
 					<small>
 						<a href="https://github.com/MatteoDiPaolo/systemic-examples">code examples here</a>
@@ -280,7 +280,7 @@ const logger = () => {
 
 				<section>
 					<h2>wrap up</h2>
-					<img data-src="./images/4.png" alt="...">
+					<img data-src="/Reaching88MphWithSystemic/images/4.png" alt="...">
 				</section>
 			</section>
 
@@ -299,7 +299,7 @@ const logger = () => {
 							</ul>
 						</div>
 						<div class="column">
-							<img height="300" data-src="./images/5.png" alt="...">
+							<img height="300" data-src="/Reaching88MphWithSystemic/images/5.png" alt="...">
 						</div>
 					</div>
 				</section>
@@ -331,7 +331,7 @@ const logger = () => {
 					<h2>yo systemic</h2>
 					<p>A white canvas service into which creating the components you do prefer according to your
 						specific business logic.</p>
-					<img height="200" data-src="./images/6.png" alt="...">
+					<img height="200" data-src="/Reaching88MphWithSystemic/images/6.png" alt="...">
 					<p style="font-size: 30px;">Out-of-the-box non-business-logic-related components</p>
 					<small class="gs-text">Config - Logger - Server</small>
 
@@ -343,7 +343,7 @@ const logger = () => {
 
 				<section>
 					<h2>yo systemic</h2>
-					<img height="300" data-src="./images/7.gif" alt="...">
+					<img height="300" data-src="/Reaching88MphWithSystemic/images/7.gif" alt="...">
 
 					<aside class="notes">
 						- package json: npm run start / npm run test<br>
@@ -363,8 +363,8 @@ const logger = () => {
 						how to get the best out of Systemic.</p>
 					<div class="row">
 						<div class="column">
-							<img height="210" data-src="./images/8.png" alt="...">
-							<img height="210" data-src="./images/9.png" alt="...">
+							<img height="210" data-src="/Reaching88MphWithSystemic/images/8.png" alt="...">
+							<img height="210" data-src="/Reaching88MphWithSystemic/images/9.png" alt="...">
 						</div>
 					</div>
 
@@ -376,7 +376,7 @@ const logger = () => {
 
 				<section>
 					<h2>yo systemic --showcase</h2>
-					<img height="300" data-src="./images/10.gif" alt="...">
+					<img height="300" data-src="/Reaching88MphWithSystemic/images/10.gif" alt="...">
 
 					<aside class="notes">
 						- package json: npm run start / npm run test / npm run infra<br>
@@ -391,13 +391,13 @@ const logger = () => {
 
 				<section>
 					<h2>yo systemic --showcase</h2>
-					<img height="500" data-src="./images/11.png" alt="...">
+					<img height="500" data-src="/Reaching88MphWithSystemic/images/11.png" alt="...">
 				</section>
 			</section>
 
 			<section>
 				<h2>Thank you</h2>
-				<img height="300" data-src="./images/12.gif" alt="...">
+				<img height="300" data-src="/Reaching88MphWithSystemic/images/12.gif" alt="...">
 			</section>
 
 		</div>
