feat: adds link to service-systemic-showcase repo

--- a/index.html
+++ b/index.html
@@ -391,7 +391,11 @@ const logger = () => {
 
 				<section>
 					<h2>yo systemic --showcase</h2>
-					<img height="500" data-src="/Reaching88MphWithSystemic/images/11.png" alt="...">
+					<small>
+						<a href="https://github.com/MatteoDiPaolo/service-systemic-showcase">service-systemic-showcase</a>
+					</small>
+					<br>
+					<img style="margin-top: 0;" height="500" data-src="/Reaching88MphWithSystemic/images/11.png" alt="...">
 				</section>
 			</section>
 
