--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="icon" href="/favicon.ico" />
 	<title>Reaching 88 mph with Systemic</title>
 
-	<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+	<meta name="description" content="Talk about Systemic a minimal dependency injection library for node.js.">
 	<meta name="author" content="Matteo Di Paolo">
 
 	<meta name="apple-mobile-web-app-capable" content="yes">
