--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<link rel="icon" href="/favicon.ico" />
+	<link rel="icon" href="/Reaching88MphWithSystemic/favicon.ico" />
 	<title>Reaching 88 mph with Systemic</title>
 
 	<meta name="description" content="Talk about Systemic a minimal dependency injection library for node.js.">
